# GenMotion

./: .gitignore  .readthedocs.yaml  LICENCE  README.rst  readme.md  readme.rst  requirements.txt  setup.cfg  setup.py  test_main.ipynb
.github/workflows/: CI.yml  test.yml
backup/: encoder_recurrent_decoder.ipynb  vae-lstm.ipynb  vrnn.ipynb
dataset/Amass/: blender.rst  readme.md
dataset/HDM05/: .gitignore  HDM05 Python .ipynb
dataset/HDM05/skeleton/: bd.fbx  bk.fbx  dg.fbx  mm.fbx  tr.fbx
docs/: requirements.txt
docs/paper/: framework.ai  paper_demo.ipynb
docs/source/: api.rst  citation.rst  compatability  conf.py  dataset.rst  gen_motionapi.rst  genmotion_api.rst  genmotion_tutorials.rst  index.rst  installation.rst  model.rst  refs.bib  render.rst  tutorials.rst
docs/source/_static/: theme.css
docs/source/api/: genmotion_learning.rst  genmotion_render.rst
docs/source/demo/: Conditional Anmation Making.ipynb
docs/source/tutorial/: Maya render AMASS animations.ipynb  render_in_maya.rst
genmotion/algorithm/action_conditioned/: params.py
genmotion/algorithm/common/: params.py  sampler.py  trainer.py
genmotion/algorithm/encoder_recurrent_decoder/: params.py  sampler.py  trainer.py
genmotion/algorithm/rnn/: models.py
genmotion/algorithm/vrnn/: models.py  params.py  sampler.py  trainer.py
genmotion/dataset/: hdm05.py  hdm05_data_utils.py
genmotion/dataset/hdm05/: hdm05_data_utils.py
src/: test.py
src/dataset/: amass_params.py  hdm05_params.py
src/datatool/: amass_params.py
src/render/c4d/: utils.py  (+9 more)
test/: download_dataset_test.ipynb
(+72 files in other folders)
