[metadata]
name = GenMotion
version = 0.0.4
author = Yizhou Zhao, Wensi Ai
author_email = yizhouzhao@ucla.edu, va0817@ucla.edu
description = A Python library for making skeletal animations
long_description = file: readme.rst
url = https://github.com/yizhouzhao/GenMotion
project_urls =
    Bug Tracker = https://github.com/yizhouzhao/GenMotion/issues
    Documentation = https://genmotion.readthedocs.io/en/latest
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = genmotion
python_requires = >=3.6